0.1.3
	Add support for obj files.
	Add icons.
	Add texture and scene paths to settings.

0.1.2
	Improved syntax highlighting by Lars Uebernickel <larsuebernickel@gmx.de>.
	Improved 3d view manipulation.
	Message panel improvements by Lars.
	Improved parameter panel, dynamic updates, color preview and sliders by Lars.
	Add recent files menu.
	Add parameter color picker by Lars.
	Add support for texture parameters.
	Add initial support for multiple scenes.

0.1.1
	Reorganize sources to create debian packages.
	Add runtime check for the presence of cgfx.
	Fix set parameters in cgfx.
	Fix paste not being enabled.
	Integrate patches from Karl Robillard <krobillard@san.rr.com> to save
	settings and enable drag and drop.
	Add partial support for ARB assembly vertex and fragment programs.

0.1.0
	First public release!
